[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-web-search"
version = "2.0.0"
description = "A comprehensive Python-based web search toolkit with Brave Search and Linkup Search tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Ugo", email = "ugovaretto@gmail.com" }
]
keywords = [
    "search",
    "brave-search",
    "linkup",
    "ai-search",
    "web-scraping",
    "api",
    "coding-agent"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "hatch>=1.9.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
brave-search = "agent_web_search.brave_search:main"
linkup-search = "agent_web_search.linkup_search:main"

[project.urls]
Homepage = "https://github.com/ugo/agent-web-search"
Documentation = "https://github.com/ugo/agent-web-search#readme"
Repository = "https://github.com/ugo/agent-web-search.git"
Issues = "https://github.com/ugo/agent-web-search/issues"
Changelog = "https://github.com/ugo/agent-web-search/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_web_search"]

[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.default.scripts]
brave = "agent_web_search.brave_search"
linkup = "agent_web_search.linkup_search"

[tool.hatch.envs.test]
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.envs.test.scripts]
run = "pytest"
run-cov = "pytest --cov=src/agent_web_search --cov-report=term-missing"
cov = ["run-cov", "--cov-report=html"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.hatch.envs.lint.scripts]
format = "ruff format src tests"
check = ["ruff check src tests", "mypy src"]
fix = "ruff check --fix src tests"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "types-requests>=2.32.4.20260107",
]
